# SoA

./: CMakeLists.txt  stl.natvis
cmake/Modules/: FindComputeCpp.cmake
include/: cache.h
src/: soa.cpp
